--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -64,25 +64,25 @@ jobs:
     #       echo "Nenhum termo 'email_router' encontrado nas linhas adicionadas."
     #     fi
 
-    - name: Verificar 'email_router' apenas nas adições e modificações do último commit
-      id: check_code
+    - name: Verificar 'email_router' em alterações de código
       run: |
-        # Exibe mudanças introduzidas no último commit, focando em adições e modificações
-        ADDED_MODIFIED_LINES=$(git show --pretty="" --unified=0 HEAD | grep '^\+' | grep -v '^+\+\+')
-        echo "Analisando linhas adicionadas ou modificadas no último commit para 'email_router'..."
+        # Identifica os arquivos modificados ou adicionados no último commit
+        FILES_MODIFIED=$(git diff --name-only HEAD^ HEAD)
 
-        # Verifica se as linhas adicionadas ou modificadas contêm o termo 'email_router'
-        if echo "$ADDED_MODIFIED_LINES" | grep -q 'email_router'; then
-          echo "Termo 'email_router' encontrado nas linhas adicionadas ou modificadas."
-          echo "::set-output name=email_router_found::true"
-        else
-          echo "Nenhum termo 'email_router' encontrado nas linhas adicionadas ou modificadas."
-          echo "::set-output name=email_router_found::false"
+        # Verifica se há arquivos modificados para evitar erros em repositórios vazios
+        if [[ -z "$FILES_MODIFIED" ]]; then
+          echo "Nenhuma modificação detectada."
+          exit 0
         fi
 
-    - name: Outras etapas baseadas no resultado
-      if: steps.check_code.outputs.email_router_found == 'true'
-      run: |
-        echo "Ações adicionais aqui devido à presença do termo 'email_router'."
-        # Aqui você pode adicionar mais comandos ou ações baseadas na detecção do termo.
+        # Loop através de arquivos modificados para buscar pelo termo específico apenas nas adições
+        for file in $FILES_MODIFIED; do
+          if git diff HEAD^ HEAD -- $file | grep -q '^+' && git diff HEAD^ HEAD -- $file | grep -q 'email_router'; then
+            echo "::error::Termo 'email_router' encontrado em $file"
+            echo "Falha intencional do workflow para indicar a necessidade de revisão."
+            exit 1
+          fi
+        done
+
+        echo "Nenhum termo 'email_router' encontrado nas alterações."
 
