--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -67,7 +67,7 @@ jobs:
     - name: Procurar 'email_router' nas adições do último commit
       run: |
         # Exibe as mudanças do último commit, filtrando para incluir apenas adições
-        ADDED_LINES=$(git show --pretty="" --unified=0 | grep '^+\S' | grep -v '^\+\+\+')
+        ADDED_LINES=$(git show --pretty="" --unified=0 | grep -v '^+++'| grep '^+')
 
         # Verifica se as linhas adicionadas contêm o termo 'email_router'
         if echo "$ADDED_LINES" | grep -q 'email_router'; then
