--- a/.github/workflows/validador_alertas.yaml
+++ b/.github/workflows/validador_alertas.yaml
@@ -68,10 +68,11 @@ jobs:
       run: |
         # Exibe as mudanças do último commit, filtrando para incluir apenas adições
         ADDED_LINES=$(git show --pretty="" --unified=0 | grep -v '^+++'| grep '^+')
+        echo "$ADDED_LINES"
 
         # Verifica se as linhas adicionadas contêm o termo 'email_router'
         if echo "$ADDED_LINES" | grep -q 'email_router'; then
-          echo "::error::Termo 'email_router' encontrado nas adições do último commit."
+          echo "::error::Termo 'email_router' encontrado nas adições do último commit, por favor remover pois esta descontinuado."
           exit 1
         else
           echo "Nenhum termo 'email_router' encontrado nas adições do último commit."
